# catts-app

./: .gitignore  Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/backend/: Cargo.toml  backend.did  build.rs
src/backend/src/: eas.rs  eth.rs  eth_rpc.rs  evm_rpc.rs  lib.rs  payments.rs  recipe.rs  run.rs  siwe.rs  state.rs  tenderly.rs  user_profile.rs
src/backend/src/service/: cancel_run.rs  canister_eth_address.rs  get_attestation_uid.rs  get_my_profile.rs  get_my_runs.rs  init_run.rs  list_recipes.rs  mod.rs  run.rs  save_my_profile.rs
src/frontend/: index.html
src/frontend/src/: App.tsx  AuthGuard.tsx  config.ts  index.css  main.tsx  state.tsx
src/frontend/src/ run-context/: RunContextProvider.tsx  run-context-state.type.ts  run-context.type.ts
src/frontend/src/catts/: runStatusToString.ts  simulateRun.ts
src/frontend/src/catts/hooks/: useCancelRun.ts  useListRecipes.ts  useSimulateRecipeQueries.tsx  useStartRun.ts
src/frontend/src/catts/types/: recipe-settings.type.ts  run-output.type.ts
src/frontend/src/components/: AttestationUidLink.tsx  BackButton.tsx  EthExplorerLink.tsx  abi.json
src/frontend/src/components/header/: EthButton.tsx  Header.tsx  IdentityButton.tsx
src/frontend/src/components/login/: LoginButton.tsx  LoginPage.tsx  LoginSection.tsx
src/frontend/src/components/profile/: Credits.tsx  NoProfileMessage.tsx
src/frontend/src/eas/: getEasConfig.ts
src/frontend/src/ic/: Actors.tsx
src/frontend/src/wagmi/: wagmi.config.ts
(+18 files in other folders)
