[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
serde = "1.0.193"
serde_json = "1.0.108"
ic-stable-structures = "0.6.0"
serde_bytes = "0.11"
sha2 = "0.10.8"
hex = "0.4.3"
blake2 = "0.10.6"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = "0.13.3"
getrandom = { version = "0.2.10", features = ["custom"] }
num-bigint = "0.4.4"
ethers-core = "2.0.14"
ic-cdk-timers = "0.7.0"
ic-wasi-polyfill = "0.4.1"
regex = "1.10.4"
boa_engine = "0.18.0"
futures = "0.3"
lazy_static = "1.4.0"

[build-dependencies]
ic-cdk-bindgen = "0.1.3"
dotenv = "0.15.0"

[dev-dependencies]
rand = "0.8.4"
ethers = "2.0.10"
